2010-01-04  Rik  <octave@nomad.inbox5.com>

	* README.MacOS: Update CFLAGS recommendation to use -O2.

2010-01-04  Rik  <octave@nomad.inbox5.com>

	* README.gnuplot: Update recommendation to version 4.4.

2010-01-04  Marco Atzeri  <marco_atzeri@yahoo.it>

	* README.Cygmin: Update build instructions before 3.4 release.

2010-12-31  Kai Habel  <kai.habel@gmx.de>

	* NEWS: Add curl and divergence to new functions list.

2010-12-20  Ben Abbott  <bpabbott@mac.com>

	* README.MacOS, Makefile.am: Update build insructions for MacOS and
	distribute file in tarball.

2010-12-20  Rik  <octave@nomad.inbox5.com>

	* README.Cray, SENDING-PATCHES, Makefile.am: Remove obsolete files.

2010-12-18  Rik  <octave@nomad.inbox5.com>

	* NEWS: Deprecate sphcat and spvcat functions.

2010-12-17  Rik  <octave@nomad.inbox5.com>

	* README.MacOS: New file documenting build instructions for Mac OSX.

2010-12-09  Kai Habel  <kai.habel@gmx.de>

	* NEWS: Add pie3 to new functions list.

2010-12-09  Marco Atzeri  <marcox_atzeri@yahoo.it>

	* configure.ac: Don't add -lwsock32 to LIBS on cygwin systems.

2010-11-21  Kai Habel  <kai.habel@gmx.de>

	* NEWS: Add uigetdir, uigetfile, uiputfile.

2010-11-19  John W. Eaton  <jwe@octave.org>

	* Makefile.am (bin_SCRIPTS): Remove run-octave from the list.

2010-10-19  John W. Eaton  <jwe@octave.org>

	* configure.ac (AC_INIT): Version is now 3.3.54+.

2010-10-19  John W. Eaton  <jwe@octave.org>

	* configure.ac (AC_INIT): Version is now 3.3.54.
	(OCTAVE_API_VERSION_NUMBER): Now 42.
	(OCTAVE_RELEASE_DATE): Now 2010-11-19.

2010-11-15  Kai Habel  <kai.habel@gmx.de>

	* NEWS: Add saveas. Fix uimenu.

2010-11-14  Michael Goffioul  <michael.goffioul@gmail.com>

	* mkoctfile.cc.in: replace %OCTAVE_CONF_F77_INTEGER8_FLAG% with
	%OCTAVE_CONF_F77_INTEGER_8_FLAG%.

2010-11-10  John W. Eaton  <jwe@octave.org>

	* configure.ac: Don't check for nan.h.

2010-11-10  John W. Eaton  <jwe@octave.org>

	* configure.ac (AH_BOTTOM): Eliminate special case for __DECCXX: 
